--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,12 @@
 
   <script type="text/javascript"> hljs.highlightAll(); </script>
   <!-- end highlight.js support -->
+  
+  <!-- dark theme using DarkReader -->
+<script src="//unpkg.com/darkreader@4.9.40/darkreader.js"></script>
+<script type="text/javascript">
+  DarkReader.setFetchMethod(window.fetch); // Fix to remedy CORS errors in chrome console
+  //DarkReader.enable();
+  DarkReader.auto( {brightness: 100, contrast: 90, sepia: 10} ); </script>
+  <!-- end dark theme using DarkReader -->
 </head>
