--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,14 @@ layout: default
       {%- endif -%}</p>
   </header>
 
+  <script src="https://utteranc.es/client.js"
+        repo="Sevastromo / sevastromo.github.io"
+        issue-term="pathname"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+  </script>
+  
   <div class="share-links">
     {% include sharelinks.html %}
   </div>
