--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,6 +29,10 @@ layout: default
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
 
-{% if site.comments_repo %}
-  {% include comments.html %}
-{% endif %}
+<script src="https://utteranc.es/client.js"
+          repo="Sevastromo/sevastromo.github.io"
+          issue-term="og:title"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+  </script>
