--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@ layout: default
 <script src="https://utteranc.es/client.js"
           repo="Sevastromo/sevastromo.github.io"
           issue-term="og:title"
-          theme="icy-dark"
+          theme="github-dark"
           crossorigin="anonymous"
           async>
   </script>
