--- a/_includes/spotifytrack.html
+++ b/_includes/spotifytrack.html
@@ -1,7 +1,7 @@
-<div class="embed-container">
- <iframe src="https://open.spotify.com/embed/track/{{ include.id }}" 
+<div class="embed-spotify">
+ <iframe src="https://open.spotify.com/embed/user/{{ include.id }}" 
         width="700" 
-        height="80" 
+        height="480" 
         frameborder="0" 
         allowtransparency="true"
         allow="encrypted-media"
