--- a/css/override.css
+++ b/css/override.css
@@ -43,3 +43,16 @@ hr {
   font-size: 2.5em;
   opacity: 0.3;
 }
+
+/*--------------
+  Post Media Embedding
+  --------------*/
+
+.embed-spotify-song {
+  width: 300px;
+  height: 80px;
+  position: relative;
+  max-width: 100%;
+  padding-bottom: 15%;
+  margin: auto;
+}
