--- a/css/override.css
+++ b/css/override.css
@@ -56,3 +56,12 @@ hr {
   padding-bottom: 15%;
   margin: auto;
 }
+
+.embed-spotify-song iframe, .embed-spotify object, .embed-spotify embed {
+  position: absolute;
+  width: 300px;
+  height: 80px;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+}
