--- a/css/override.css
+++ b/css/override.css
@@ -53,6 +53,8 @@ hr {
   height: 80px;
   position: relative;
   max-width: 100%;
+  padding-bottom: 15%;
+  margin: auto;
 }
 
 .embed-spotify-song iframe, .embed-spotify object, .embed-spotify embed {
