--- a/css/override.css
+++ b/css/override.css
@@ -53,7 +53,7 @@ hr {
   height: 80px;
   position: relative;
   max-width: 100%;
-  margin: auto;
+  padding-bottom: 15%;
 }
 
 .embed-spotify-song iframe, .embed-spotify object, .embed-spotify embed {
