--- a/css/override.css
+++ b/css/override.css
@@ -65,3 +65,18 @@ hr {
   left: 0;
   max-width: 100%;
 }
+
+.embed-youtube {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+  }
+
+.embed-youtube iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
