--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,9 @@
 
   gtag('config', 'G-45R5LED7EQ');
   </script>
+  
+  {% if site.tags != "" %}
+    {% include collecttags.html %}
+  {% endif %}
+  
 </head>
