--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,4 +38,6 @@
     {% include collecttags.html %}
   {% endif %}
   
+  <link rel="icon" href="sevastromo.github.io/favicon.ico" type="image/x-icon">
+  
 </head>
