--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
  
-  <link rel="icon" href="sevastromo.github.io/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   
   <!-- highlight.js support -->
   <link rel="stylesheet" href="/js/highlightjs/styles/github.css">
